<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Wabot</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_kontak">Kontak</string>
    <string name="menu_group">Grup Kontak</string>
    <string name="menu_kirim_pesan">Kirim Pesan</string>
    <string name="menu_broadcast">Broadcast</string>
    <string name="menu_pesan_terjadwal">Pesan Terjadwal</string>
    <string name="menu_antrian_pesan">Antrian Pesan</string>
    <string name="menu_pesan_terkirim">Pesan Terkirim</string>
    <string name="menu_autoreply">Auto Reply</string>
    <string name="menu_group_autoreply">Grup Auto Reply</string>
    <string name="menu_pengaturan">Pengaturan</string>
    <string name="menu_marketing_kit">Marketing Kit</string>
    <string name="menu_autotext">Auto Text</string>
    <string name="menu_group_autotext">Grup Auto Text</string>
    <string name="manu_akun">Akun</string>
    <string name="menu_upgrade">Upgrade Akun</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_wa_generator">WA Link Generator</string>
    <string name="manu_landing_page">Landing Page</string>
    <string name="menu_home">Dasbor</string>
    <string name="menu_help">Tutorial &amp; Bantuan</string>
    <string name="menu_afiliasi">Affiliasi</string>
    <string name="menu_followup">Follow Up</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toast_tidak_ada_internet">Tidak ada koneksi internet. Pastikan jaringan anda terhubung ke internet.</string>
    <string name="toast_network_error">Periksa kembali koneksi internet anda</string>
    <string name="toast_server_error">Terjadi kesalahan server, silakan coba beberapa saat lagi</string>
    <string name="toast_timeout">Timeout. Silakan coba beberapa saat lagi</string>
    <string name="toast_terjadi_kesalahan">Terjadi kesalahan, silakan coba beberapa saat lagi. Kemungkinan kesalahan dari server atau sesi anda telah habis. Jika masih bermasalah silahkan keluar kemudian login kembali.</string>
    <string name="accessibility_service_label">aksesibilitas Wabot</string>
    <string name="accessibility_service_description">Layanan yang bertanggung jawab untuk mengotomatisasi pengiriman pesan</string>
    <string name="warning_disable_accessibility">Aktifkan layanan aksesibilitas Wabot</string>
    <string name="snack_enable_service">Pengaturan</string>
    <string name="ime_name">Wabot Keyboard</string>
    <string name="word_separators">\u0020.,;:!?\n()[]*&amp;@{}/&lt;&gt;_+=|&quot;</string>
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_send_key">Send</string>
    <string name="label_subtype_generic">%s</string>
    <string name="label_subtype_en_GB">English (GB)</string>
    <string name="settings_name">Wabot Keyboard Settings</string>
    <string name="general_category">General</string>
    <string name="menu_tutorial">Tutorial</string>
    <string name="menu_ecourse">eCourse Whatsapp Marketing</string>
    <string name="menu_marketing_tool">Marketing Tool</string>
    <string name="menu_operator">Data Operator</string>
    <string name="menu_apikey">API Key</string>
    <string name="menu_log">Log Service</string>
    <string name="manu_leadmagnet">Lead Magnet</string>
    <string name="menu_notification">Notifikasi</string>
    <string name="english_ime_input_options">Input options</string>
    <string name="vibrate_on_keypress">Vibrate on keypress</string>
    <string name="sound_on_keypress">Sound on keypress</string>
    <string name="popup_on_keypress">Popup on keypress</string>
    <string name="settings_screen_preferences">Preferences</string>
    <string name="settings_screen_appearance">Appearance &amp; Layouts</string>
    <string name="settings_screen_advanced">Advanced</string>
    <string name="settings_screen_theme">Theme</string>
    <string name="abbreviation_unit_milliseconds"><xliff:g id="MILLISECONDS">%s</xliff:g>ms</string>
    <string name="settings_system_default">System default</string>
    <string name="auto_cap">Auto-capitalization</string>
    <string name="auto_cap_summary">Capitalize the first word of each sentence</string>
    <string name="language_selection_title">Languages</string>
    <string name="select_language">Languages</string>
    <string name="subtype_en_GB">English (UK)</string>
    <string name="subtype_en_US">English (US)</string>
    <string name="subtype_es_US">Spanish (US)</string>
    <string name="subtype_hi_ZZ">Hinglish</string>
    <string name="subtype_sr_ZZ">Serbian (Latin)</string>
    <string name="subtype_with_layout_en_GB">English (UK) (<xliff:g example="QWERTY" id="KEYBOARD_LAYOUT">%s</xliff:g>)</string>
    <string name="subtype_with_layout_en_US">English (US) (<xliff:g example="QWERTY" id="KEYBOARD_LAYOUT">%s</xliff:g>)</string>
    <string name="subtype_with_layout_es_US">Spanish (US) (<xliff:g example="QWERTY" id="KEYBOARD_LAYOUT">%s</xliff:g>)</string>
    <string name="subtype_with_layout_hi_ZZ">Hinglish (<xliff:g example="QWERTY" id="KEYBOARD_LAYOUT">%s</xliff:g>)</string>
    <string name="subtype_with_layout_sr_ZZ">Serbian (<xliff:g example="QWERTY" id="KEYBOARD_LAYOUT">%s</xliff:g>)</string>
    <string name="subtype_generic_traditional"><xliff:g example="Nepali" id="LANGUAGE_NAME">%s</xliff:g> (Traditional)</string>
    <string name="subtype_generic_compact"><xliff:g example="Hindi" id="LANGUAGE_NAME">%s</xliff:g> (Compact)</string>
    <string name="keyboard_theme_dark_border" translatable="false">Material Dark Border</string>
    <string name="keyboard_theme_light_border" translatable="false">Material Light Border</string>
    <string name="keyboard_theme_dark" translatable="false">Material Dark</string>
    <string name="keyboard_theme_light" translatable="false">Material Light</string>
    <string name="custom_input_styles_title">Custom input styles</string>
    <string name="add_style">Add style</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="save">Save</string>
    <string name="subtype_locale">Language</string>
    <string name="keyboard_layout_set">Layout</string>
    <string name="custom_input_style_note_message">"Your custom input style needs to be enabled before you start using it. Do you want to enable it now?"</string>
    <string name="enable">Enable</string>
    <string name="not_now">Not now</string>
    <string name="custom_input_style_already_exists">"The same input style already exists: <xliff:g example="English (Dvorak)" id="INPUT_STYLE_NAME">%s</xliff:g>"</string>
    <string name="prefs_keypress_vibration_duration_settings">Keypress vibration duration</string>
    <string name="prefs_keypress_sound_volume_settings">Keypress sound volume</string>
    <string name="prefs_key_longpress_timeout_settings">Key long press delay</string>
    <string name="button_default">Default</string>
    <string name="abbreviation_unit_percent" translatable="false"><xliff:g id="PERCENTS">%s</xliff:g>%%</string>
    <string name="prefs_keyboard_height_settings">Keyboard height</string>
    <string name="keyboard_color">Set custom keyboard color</string>
    <string name="hide_special_chars">Hide special characters</string>
    <string name="hide_language_switch_key">Hide language switch key</string>
    <string name="show_number_row">Show separate number row</string>
    <string name="space_swipe">Space swipe cursor move</string>
    <string name="delete_swipe">Delete swipe</string>
    <string name="matching_navbar_color">Use matching navigation bar color</string>
    <string name="setup_message">WABOT Keyboard is not enabled. Click OK to open Languages &amp; Input settings. You will need to select WABOT Keyboard in your current keyboard to use it.</string>
    <string name="menu_template_promosi">Template Promosi</string>
    <string name="menu_template_kamus">Template Dictionary</string>
    <string name="menu_waform">WhatsApp Form</string>
    <string name="menu_template_dibagikan">Template dibagikan</string>
    <string name="menu_linkpage">Link Page</string>
    <string name="internal_storage">Internal storage</string>
</resources>